chore: make ts more lax with web components

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -80,8 +80,8 @@ const links: ListItem[] = [
   @controller
   class NavOpenElement extends HTMLElement {
     @attr open = true;
-    @target btn!: HTMLButtonElement;
-    @targets links!: HTMLAnchorElement[];
+    @target btn: HTMLButtonElement;
+    @targets links: HTMLAnchorElement[];
 
     scrollY = 0;
     ticking = false;
