--- a/src/components/iBen/Frame.astro
+++ b/src/components/iBen/Frame.astro
@@ -108,10 +108,10 @@ const showcaseSrc = getImgSrc(showcaseVideo);
     @attr welcome = false;
     @attr videoIdx = 0;
 
-    @target declare btnLabels: HTMLDivElement;
-    @target declare thumbnail: HTMLImageElement;
-    @target declare iframeTemplate: HTMLTemplateElement;
-    @target declare cdDrive: HTMLElement;
+    @target btnLabels: HTMLDivElement;
+    @target thumbnail: HTMLImageElement;
+    @target iframeTemplate: HTMLTemplateElement;
+    @target cdDrive: HTMLElement;
 
     #videoIds: string[] = [showcaseVideo, ...fisherYatesShuffle(otherVideos)];
 
