--- a/src/components/heading/Whiteboard.astro
+++ b/src/components/heading/Whiteboard.astro
@@ -11,6 +11,7 @@ import marker from "./marker.svg?raw";
     width="800"
     height="1200"
     data-target="my-whiteboard.canvas"
+    data-action="click:my-whiteboard#startDrawing"
     class="absolute inset-11 top-[2.7rem] rounded-2xl"></canvas>
   <div
     class="group/markers opacity-30 group-[[data-drawing]]:opacity-100 transition-opacity absolute bottom-2 left-11 right-4 flex justify-center gap-2"
