--- a/src/components/heading/Whiteboard.astro
+++ b/src/components/heading/Whiteboard.astro
@@ -14,6 +14,18 @@ import marker from "./marker.svg?raw";
     data-action="click:my-whiteboard#startDrawing"
     class="absolute inset-11 top-[2.7rem] rounded-2xl"></canvas>
   <div
+    data-action="click:my-whiteboard#startDrawing"
+    data-target="my-whiteboard.eraser"
+    class="absolute left-[52px] bottom-[52px]"
+  >
+    <label
+      class="bg-marker-blue block w-[50px] h-[70px] rounded-xl group-[[data-drawing]]:not-has-checked:bg-marker-blue-light group-[[data-drawing]]:has-checked:scale-110 transition-transform ease-spring-5 duration-700"
+    >
+      <span class="sr-only">Eraser</span>
+      <input class="sr-only" type="radio" value="eraser" name="color" />
+    </label>
+  </div>
+  <div
     class="group/markers opacity-30 group-[[data-drawing]]:opacity-100 transition-opacity absolute bottom-2 left-11 right-4 flex justify-center gap-2"
     data-action="click:my-whiteboard#startDrawing"
   >
@@ -115,14 +127,6 @@ import marker from "./marker.svg?raw";
         </defs>
       </g>
     </g>
-    <rect
-      data-target="my-whiteboard.eraser"
-      x="52"
-      y="480"
-      fill="#0034ff"
-      width="50"
-      height="70"
-      rx="10"></rect>
     <defs>
       <filter
         id="filter0_dddd_222_3"
