chore: fix nav margin

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -25,7 +25,7 @@ const links: ListItem[] = [
 
 <nav-open data-open class="group">
   <nav
-    class="sticky top-0 max-w-[100ch] flex gap-6 items-center text-lg py-3 px-5 transition-colors duration-300"
+    class="sticky top-0 max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-3 px-5 transition-colors duration-300"
   >
     {headings?.length ? <Toc {headings} /> : null}
     <ul transition:persist id={id} class="flex gap-6 ml-auto items-center">
