fix: header stacking

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -23,7 +23,7 @@ const links: ListItem[] = [
 ];
 ---
 
-<nav-open data-open class="group">
+<nav-open data-open class="group relative z-20">
   <nav
     class="sticky top-0 max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-3 px-5 transition-colors duration-300"
   >
