Revert "wip: remove iBen"
This reverts commit bb574fa35db9b533c3926face404eb45cada3053.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import IBen from "../components/iBen/Frame.astro";
 <BaseLayout>
   <main>
     <Heading />
-    <!-- <IBen /> -->
+    <IBen />
     <article class="max-w-prose m-auto flex flex-col gap-4">
       <InBrief />
     </article>
