fix: move z-index to sticky nav

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -23,9 +23,9 @@ const links: ListItem[] = [
 ];
 ---
 
-<nav-open data-open class="group relative z-20">
+<nav-open data-open class="group">
   <nav
-    class="sticky top-0 max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-3 px-5 transition-colors duration-300"
+    class="sticky z-20 top-0 max-w-[80ch] mx-auto flex gap-6 items-center text-lg py-3 px-5 transition-colors duration-300"
   >
     {headings?.length ? <Toc {headings} /> : null}
     <ul transition:persist id={id} class="flex gap-6 ml-auto items-center">
