--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,7 +45,7 @@ const { title = "Ben Holmes", headings } = Astro.props;
   </head>
   <body class="bg-gray-950 text-white text-base">
     <Nav headings={headings} />
-    <div class="relative z-10">
+    <div>
       <slot />
     </div>
     <style is:global>
