--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -99,8 +99,9 @@ const { Content, headings } = await post.render();
             waitingOnAnimRequest = false;
             const articleRect = this.getBoundingClientRect();
             const articleHeight = this.offsetTop + articleRect.height;
-            progress.set(
-              Math.min((window.scrollY + window.innerHeight) / articleHeight, 1)
+            progress.value = Math.min(
+              (window.scrollY + window.innerHeight) / articleHeight,
+              1
             );
           });
           waitingOnAnimRequest = true;
@@ -112,8 +113,8 @@ const { Content, headings } = await post.render();
           entries.forEach((entry) => {
             if (entry.isIntersecting) {
               if (headings.includes(entry.target as HTMLHeadingElement)) {
-                currentSectionIdx.set(
-                  headings.indexOf(entry.target as HTMLHeadingElement)
+                currentSectionIdx.value = headings.indexOf(
+                  entry.target as HTMLHeadingElement
                 );
               }
               let heading: HTMLHeadingElement | null = null;
@@ -130,7 +131,7 @@ const { Content, headings } = await post.render();
               if (!heading) return;
               const idx = headings.indexOf(heading);
               if (idx >= 0) {
-                currentSectionIdx.set(idx);
+                currentSectionIdx.value = idx;
               }
             }
           });
