--- a/src/components/heading/Whiteboard.astro
+++ b/src/components/heading/Whiteboard.astro
@@ -5,6 +5,7 @@ import marker from "./marker.svg?raw";
 
 <div
   data-whiteboard-container
+  transition:name="whiteboard"
   class="relative rotate-3 group-[[data-drawing]]:rotate-0 transition-transform duration-300"
 >
   <canvas
