--- a/src/components/heading/Whiteboard.astro
+++ b/src/components/heading/Whiteboard.astro
@@ -1,6 +1,7 @@
 ---
 import { scope } from "simple:scope";
 import marker from "./marker.svg?raw";
+import { Icon } from "astro-icon/components";
 ---
 
 <div
@@ -25,6 +26,16 @@ import marker from "./marker.svg?raw";
       <span class="sr-only">Eraser</span>
       <input class="sr-only" type="radio" value="eraser" name="color" />
     </label>
+  </div>
+  <div>
+    <button
+      class="invisible opacity-0 group-[[data-drawing]]:opacity-100 group-[[data-drawing]]:visible transition-all absolute top-6 right-2 p-2 bg-slate-500 rounded-full"
+      data-target="my-whiteboard.closeBtn"
+      data-action="click:my-whiteboard#stopDrawing"
+    >
+      <span class="sr-only">Close</span>
+      <Icon name="close" class="text-white" />
+    </button>
   </div>
   <div
     class="group/markers opacity-30 group-[[data-drawing]]:opacity-100 transition-opacity absolute bottom-2 left-11 right-4 flex justify-center gap-2"
@@ -73,23 +84,7 @@ import marker from "./marker.svg?raw";
         width="337.318"
         height="513.09"
         rx="20"
-        fill="white"></rect>
-      <rect
-        x="44.4192"
-        y="42.8673"
-        width="337.318"
-        height="513.09"
-        rx="20"
-        class="group-[[data-drawing]]:opacity-0 transition-opacity"
-        fill="url(#paint0_linear_222_3)"></rect>
-      <rect
-        x="44.4192"
-        y="42.8673"
-        width="337.318"
-        height="513.09"
-        rx="20"
-        fill="url(#paint1_radial_222_3)"
-        fill-opacity="0.2"></rect>
+        fill="#F9FAFB"></rect>
       <g data-target="my-whiteboard.face">
         <path
           d="M158.262 319.189C168.246 330.416 185.183 338.872 211.569 338.872C237.955 338.872 254.892 330.416 264.876 319.189"
@@ -142,7 +137,7 @@ import marker from "./marker.svg?raw";
           clip-path={`url(#${scope("scribble-bounds")})`}
           data-target="my-whiteboard.scribble"
           d="M22.2191 30.6216C89.0424 33.6849 240.261 44.5515 300.44 82.6372C224.592 53.5359 59.8409 59.4502 22.688 89.3778C61.8098 73.8145 248.839 102.982 279.368 142.084C232.335 109.693 49.0079 123.682 20.1221 147.941C57.2131 132.178 252.802 157.562 275.461 202.292C242.329 178.056 52.5287 185.746 26.0628 206.139"
-          stroke="white"
+          stroke="#F9FAFB"
           transform="translate(58 160)"
           stroke-dasharray="1630"
           stroke-dashoffset="1630"
@@ -155,28 +150,6 @@ import marker from "./marker.svg?raw";
       </g>
     </g>
     <defs>
-      <linearGradient
-        id="paint0_linear_222_3"
-        x1="231.838"
-        y1="339.678"
-        x2="352.319"
-        y2="530.611"
-        gradientUnits="userSpaceOnUse"
-      >
-        <stop stop-color="#F9FAFB"></stop>
-        <stop offset="1" stop-color="#F9FAFB" stop-opacity="0.7"></stop>
-      </linearGradient>
-      <radialGradient
-        id="paint1_radial_222_3"
-        cx="0"
-        cy="0"
-        r="1"
-        gradientUnits="userSpaceOnUse"
-        gradientTransform="translate(101.192 99.5556) rotate(46.1711) scale(32.4772 21.3513)"
-      >
-        <stop stop-color="white"></stop>
-        <stop offset="1" stop-color="#F9FAFB"></stop>
-      </radialGradient>
       <linearGradient
         id="paint2_linear_222_3"
         x1="119.576"
