feat: better mobile padding

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -43,7 +43,7 @@ const { title = "Ben Holmes", headings } = Astro.props;
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="bg-gray-950 text-white text-base">
+  <body class="bg-gray-950 text-white text-base px-4 md:px-8">
     <my-shroud
       class="fixed inset-0 invisible bg-gray-950 opacity-0 z-30 data-[visible]:opacity-80 data-[visible]:visible transition-all"
     ></my-shroud>
