chore: tweak canvas bounds

--- a/src/components/heading/Whiteboard.astro
+++ b/src/components/heading/Whiteboard.astro
@@ -14,7 +14,7 @@ import { Icon } from "astro-icon/components";
     height="1200"
     data-target="my-whiteboard.canvas"
     data-action="click:my-whiteboard#startDrawing"
-    class="absolute inset-11 top-[2.7rem] rounded-2xl"></canvas>
+    class="absolute inset-[2.7rem] rounded-2xl"></canvas>
   <div
     data-action="click:my-whiteboard#startDrawing"
     data-target="my-whiteboard.eraser"
